# backend/routes/userInfo.route.js
@@ -12,22 +12,22 @@ const userInfoController = require('../controllers/userInfo.controllr')
 
 // add user Info 
 router.post(
-    '/user/addUserInfo',
+    '/api/user/addUserInfo',
     auth.userAuth,
     userInfoController.addUserInfo
 )
 
 // Edit user info (by user)
-router.patch('/user/editSingleInfo/:id', auth.userAuth, userInfoController.editSingleInfo)
+router.patch('/api/user/editSingleInfo/:id', auth.userAuth, userInfoController.editSingleInfo)
 
 // Show single user info (by user)
-router.get('/user/showSingleInfo/:id', auth.userAuth, userInfoController.showSingleInfo)
+router.get('/api/user/showSingleInfo/:id', auth.userAuth, userInfoController.showSingleInfo)
 
 // Show all user Info (by user)
-router.post('/user/showAllUserInfoByUser', auth.userAuth, userInfoController.showAllUserInfoByUser)
+router.post('/api/user/showAllUserInfoByUser', auth.userAuth, userInfoController.showAllUserInfoByUser)
 
 // Show all user info (by admin)
-router.get('/admin/showAllUserInfoByAdmin/:id', auth.adminAuth, userInfoController.showAllUserInfoByAdmin)
+router.get('/api/admin/showAllUserInfoByAdmin/:id', auth.adminAuth, userInfoController.showAllUserInfoByAdmin)
 
 // To export router
 module.exports = router
