# backend/swagger.json
@@ -19,6 +19,14 @@
     {
       "name": "user",
       "description": "Operations about user"
+    },
+    {
+      "name": "userInformation",
+      "description": "Operations about user information"
+    },
+    {
+      "name": "instructions",
+      "description": "Operations about instructions"
     }
   ],
   "schemes": ["http"],
@@ -57,6 +65,27 @@
         "security": [{ "bearerAuth": [] }]
       }
     },
+    "/admin/single/{id}": {
+      "get": {
+        "tags": ["user"],
+        "summary": "show single user by admin",
+        "description": "show single user",
+        "operationId": "showUser",
+        "produces": ["application/json", "application/xml"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of user",
+            "required": true,
+            "type": "string"
+          }
+        ],
+
+        "responses": {},
+        "security": [{ "bearerAuth": [] }]
+      }
+    },
     "/admin/delUser/{id}": {
       "delete": {
         "tags": ["user"],
@@ -78,89 +107,50 @@
         "security": [{ "bearerAuth": [] }]
       }
     },
-    "/user/createWithArray": {
-      "post": {
-        "tags": ["user"],
-        "summary": "Creates list of users with given input array",
-        "operationId": "createUsersWithArrayInput",
-        "produces": ["application/json", "application/xml"],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "List of user object",
-            "required": true,
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/User"
-              }
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": "successful operation"
-          }
-        }
-      }
-    },
-    "/user/createWithList": {
-      "post": {
-        "tags": ["user"],
-        "summary": "Creates list of users with given input array",
-        "operationId": "createUsersWithListInput",
-        "produces": ["application/json", "application/xml"],
-        "parameters": [
-          {
-            "in": "body",
-            "name": "body",
-            "description": "List of user object",
-            "required": true,
-            "schema": {
-              "type": "array",
-              "items": {
-                "$ref": "#/definitions/User"
-              }
-            }
-          }
-        ],
-        "responses": {
-          "default": {
-            "description": "successful operation"
-          }
-        }
-      }
-    },
     "/user/login": {
       "post": {
         "tags": ["user"],
         "summary": "Logs user into the system",
         "operationId": "login",
-        "produces": ["application/json", "application/xml"],
+        "consumes": ["application/x-www-form-urlencoded","multipart/form-data"],
+        "produces": ["application/json"],
         "parameters": [
           {
-            "in": "body",
-            "name": "Email and password",
-            "description": "Enter your email and Password to login",
-            "required": true
+            "name": "email",
+            "in": "formData",
+            "description": "title of instruction",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "password",
+            "in": "formData",
+            "description": "description of instruction",
+            "required": true,
+            "type": "string"
           }
         ],
         "responses": {}
       }
     },
     "/user/logout": {
-      "get": {
+      "post": {
         "tags": ["user"],
-        "summary": "Logs out current logged in user session",
-        "operationId": "logoutUser",
+        "summary": "Logs out current logged in ",
+        "operationId": "logout",
         "produces": ["application/json", "application/xml"],
-        "parameters": [],
-        "responses": {
-          "default": {
-            "description": "successful operation"
-          }
-        }
+        "responses": {},
+        "security": [{ "bearerAuth": [] }]
+      }
+    },
+    "/user/logoutAll": {
+      "post": {
+        "tags": ["user"],
+        "summary": "Logs out current logged in ",
+        "operationId": "logoutAll",
+        "produces": ["application/json", "application/xml"],
+        "responses": {},
+        "security": [{ "bearerAuth": [] }]
       }
     },
     "/user/delete": {
@@ -170,6 +160,260 @@
         "description": "This can only be done by the logged in user.",
         "operationId": "deleteUser",
         "produces": ["application/json", "application/xml"],
+
+        "responses": {},
+        "security": [{ "bearerAuth": [] }]
+      }
+    },
+    "/user/addUserInfo": {
+      "post": {
+        "tags": ["userInformation"],
+        "summary": "Add user information",
+        "description": "This can only be done by login user.",
+        "operationId": "addUserInfo",
+        "produces": ["application/json", "application/xml"],
+        "parameters": [
+          {
+            "in": "body",
+            "name": "body",
+            "description": "add user information",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/UserInfo"
+            }
+          }
+        ],
+        "responses": {},
+        "security": [{ "bearerAuth": [] }]
+      }
+    },
+    "/user/showSingleInfo/{id}": {
+      "get": {
+        "tags": ["userInformation"],
+        "summary": "show single user information",
+        "description": "show single user information by user",
+        "operationId": "showSingleInfo",
+        "produces": ["application/json", "application/xml"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of user information",
+            "required": true,
+            "type": "string"
+          }
+        ],
+
+        "responses": {},
+        "security": [{ "bearerAuth": [] }]
+      }
+    },
+    "/user/editSingleInfo/{id}": {
+      "patch": {
+        "tags": ["userInformation"],
+        "summary": "edit single user information",
+        "description": "edit single user information by user",
+        "operationId": "editSingleInfo",
+        "produces": ["application/json", "application/xml"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of user information",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "description": "Updated user information",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/UserInfo"
+            }
+          }
+        ],
+
+        "responses": {},
+        "security": [{ "bearerAuth": [] }]
+      }
+    },
+    "/user/showAllUserInfoByUser": {
+      "post": {
+        "tags": ["userInformation"],
+        "summary": "show all user information",
+        "description": "This can only be done by login user.",
+        "operationId": "showAllUserInfoByUser",
+        "produces": ["application/json", "application/xml"],
+        
+        "responses": {},
+        "security": [{ "bearerAuth": [] }]
+      }
+    },
+    "/admin/showAllUserInfoByAdmin/{id}": {
+      "get": {
+        "tags": ["userInformation"],
+        "summary": "show all user information ",
+        "description": "show all  user information by admin",
+        "operationId": "showAllUserInfoByAdmin",
+        "produces": ["application/json", "application/xml"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of user",
+            "required": true,
+            "type": "string"
+          }
+        ],
+
+        "responses": {},
+        "security": [{ "bearerAuth": [] }]
+      }
+    },
+    "/admin/addInstruction": {
+      "post": {
+        "tags": ["instructions"],
+        "summary": "add instructions",
+        "description": "Replay on the users (add instructions)",
+        "operationId": "addInstruction",
+        "consumes": ["application/x-www-form-urlencoded"],
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "userId",
+            "in": "formData",
+            "description": "Id of user to add instruction",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "title",
+            "in": "formData",
+            "description": "title of instruction",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "description",
+            "in": "formData",
+            "description": "description of instruction",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "file",
+            "in": "formData",
+            "description": "file to upload (gif)",
+            "required": true,
+            "type": "file"
+          }
+        ],
+        "responses": {},
+        "security": [{ "bearerAuth": [] }]
+      }
+    },
+    "/admin/showInstructions": {
+      "post": {
+        "tags": ["instructions"],
+        "summary": "Show all instructions",
+        "description": "This can only be done by login admin.",
+        "operationId": "showInstructions",
+        "produces": ["application/json", "application/xml"],
+        "responses": {},
+        "security": [{ "bearerAuth": [] }]
+      }
+    },
+    "/user/showInstruction": {
+      "post": {
+        "tags": ["instructions"],
+        "summary": "Show all instructions for user (by user)",
+        "description": "This can only be done by login user.",
+        "operationId": "showInstruction",
+        "produces": ["application/json", "application/xml"],
+        "responses": {},
+        "security": [{ "bearerAuth": [] }]
+      }
+    },
+    "/admin/showInstructionsUser/{id}": {
+      "get": {
+        "tags": ["instructions"],
+        "summary": "show all instructions for one user ",
+        "description": "This can only be done by login admin",
+        "operationId": "showInstructionsUser",
+        "produces": ["application/json", "application/xml"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of user",
+            "required": true,
+            "type": "string"
+          }
+        ],
+
+        "responses": {},
+        "security": [{ "bearerAuth": [] }]
+      }
+    },
+    "/admin/showSingleInstruction/{id}": {
+      "get": {
+        "tags": ["instructions"],
+        "summary": "show single instruction ",
+        "description": "This can only be done by login admin",
+        "operationId": "showSingleInstruction",
+        "produces": ["application/json", "application/xml"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of instruction",
+            "required": true,
+            "type": "string"
+          }
+        ],
+
+        "responses": {},
+        "security": [{ "bearerAuth": [] }]
+      }
+    },
+    "/admin/editSingleInstruction/{id}": {
+      "patch": {
+        "tags": ["instructions"],
+        "summary": "Edit single instruction ",
+        "description": "This can only be done by login admin",
+        "operationId": "editSingleInstruction",
+        "produces": ["application/json", "application/xml"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of instruction",
+            "required": true,
+            "type": "string"
+          }
+        ],
+
+        "responses": {},
+        "security": [{ "bearerAuth": [] }]
+      }
+    },
+    "/admin/deleteSingleInstruction/{id}": {
+      "delete": {
+        "tags": ["instructions"],
+        "summary": "delete single instruction ",
+        "description": "This can only be done by login admin",
+        "operationId": "deleteSingleInstruction",
+        "produces": ["application/json", "application/xml"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "ID of instruction",
+            "required": true,
+            "type": "string"
+          }
+        ],
 
         "responses": {},
         "security": [{ "bearerAuth": [] }]
@@ -216,6 +460,45 @@
           "type": "string"
         }
       }
+    },
+    "UserInfo": {
+      "type": "object",
+      "properties": {
+        "gender": {
+          "type": "string",
+          "enum":["Male","Female"]
+        },
+        "height": {
+          "type": "number"
+        },
+        "weight": {
+          "type": "number"
+        },
+        "age": {
+          "type": "number"
+        },
+        "notes": {
+          "type": "string"
+        }
+      }
+    },
+    "Instructions": {
+      "type": "object",
+      "properties": {
+        "user_id": {
+          "type": "string"
+        },
+        "title": {
+          "type": "string"
+        },
+        "description": {
+          "type": "string"
+        },
+        "fileName": {
+          "type": "string"
+        }
+      }
     }
   }
 }
+
